# subsgen

./: LICENSE  README.md  TODO.md  main.py  pyproject.toml
subsgen/: cli.py  gui.py  main.py  subtitle.py  transcriber.py  utils.py
