[project]
name = "subsgen"
version = "0.1.0"
description = "CLI tool to auto-generate subtitles for video and audio files using Whisper AI."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "faster-whisper>=1.2.1",
  "torch>=2.10.0",
  "tqdm>=4.67.1",
  "ttkbootstrap>=1.20.2",
]

[project.scripts]
subsgen = "subsgen.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pyinstaller>=6.19.0",
]
